# usercode-OMTFSimulation

./: BuildFile.xml
data/: RefHits.txt  hwToLogicLayer.xml  hwToLogicLayer_18layersFix2.xml  hwToLogicLayer_721.xml
interface/: .#OMTFConfigurator.h  GoldenPattern.h  InternalObj.h  L1Obj.h  MtfCoordinateConverter.h  OMTFConfigMaker.h  OMTFConfiguration.h  OMTFLogicConeBuilder.h  OMTFPatternMaker.h  OMTFProcessor.h  OMTFResult.h  OMTFSorter.h  OMTFinput.h  OMTFinputMaker.h  XMLConfigWriter.h
plugins/: BuildFile.xml  OMTFPatternMaker.cc  OMTFProducer.cc  OMTFProducer.h  OMTFROOTReader.cc  OMTFROOTReader.h  OMTFROOTReader.h~  SealModule.cc
src/: .#OMTFConfiguration.cc  GoldenPattern.cc  InternalObj.cc  L1Obj.cc  Makefile.am  MtfCoordinateConverter.cpp  OMTFConfigMaker.cc  OMTFConfiguration.cc  OMTFLogicConeBuilder.cc  OMTFProcessor.cc  OMTFResult.cc  OMTFSorter.cc  OMTFinput.cc  OMTFinputMaker.cc  XMLConfigReader.cc  XMLConfigWriter.cc  libOMTFSimulation.la
src/.deps/: GoldenPattern.Plo  L1Obj.Plo  OMTFConfiguration.Plo  OMTFProcessor.Plo  OMTFResult.Plo  OMTFSorter.Plo  OMTFinput.Plo  XMLConfigReader.Plo  XMLConfigWriter.Plo  libOMTFSimulation_la-GoldenPattern.Plo  libOMTFSimulation_la-OMTFConfiguration.Plo  libOMTFSimulation_la-OMTFProcessor.Plo  libOMTFSimulation_la-OMTFinput.Plo  libOMTFSimulation_la-XMLConfigReader.Plo
src/.libs/: libOMTFSimulation.la  libOMTFSimulation.lai  libOMTFSimulation.so.0  libOMTFSimulation.so.0.0.0
test/: BuildFile.xml  Makefile.am  runOMTF.py  runOMTFPatternMaker.py  runOMTFProducer.py  test  test.cc  testCMSSW.cc
test/.deps/: test-test.Po  test.Po
test/.libs/: test
